--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -113,6 +113,13 @@
       "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Rural/Baseball/Primarily Teen Cast/Basketball/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
     },
     {
+      "id": "tt33258199",
+      "type": "series",
+      "name": "A Wild Last Boss Appeared!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180523-FjvW1XByUNMK.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Gender Bending/Magic/Virtual World/Video Games/Primarily Female Cast/Female Protagonist/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt34714068",
       "type": "series",
       "name": "Wandance",
@@ -125,6 +132,13 @@
       "name": "Bukiyou na Senpai.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185575-moQeN8f5xRBv.jpg",
       "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
+    },
+    {
+      "id": "tt31975747",
+      "type": "series",
+      "name": "Dusk Beyond the End of the World",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
+      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Robots/Dystopian/Post-Apocalyptic/Artificial Intelligence/Male Protagonist/Gore\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
     },
     {
       "id": "tt30488398",
@@ -148,24 +162,10 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Dungeon/Magic/Maids/Gore/Survival\nWhen Light is kicked out of the Concord of the Tribes, his former comrades instantly turn on him. Light escapes this diabolical act of betrayal by the skin of his teeth...only to find himself in the deepest part of the Abyss, the most dangerous dungeon in the realm! To avoid being eaten by carnivorous monsters, he uses the Unlimited Gacha, his sole magical skill. But where it previously only produced junk items, this time Mei—a gorgeous Level 9999 fighter in a maid outfit—springs forth! Fast forward three years and Light has carved out his own kingdom in this backwater dungeon, summoning more beautiful Level 9999 warriors who swear absolute fealty to him. Now a powerful Level 9999 Overlord himself, Light plans to ascend to the surface and take revenge on his betrayers one by one!\n<br><br>\n(Source: J-Novel Club)"
     },
     {
-      "id": "tt36190100",
-      "type": "series",
-      "name": "Dusk Beyond the End of the World",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
-      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Robots/Dystopian/Post-Apocalyptic/Artificial Intelligence/Male Protagonist/Gore\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
-    },
-    {
-      "id": "tt33258199",
-      "type": "series",
-      "name": "A Wild Last Boss Appeared!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180523-FjvW1XByUNMK.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Primarily Female Cast/Female Protagonist/Gender Bending/Virtual World/Video Games/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt35437675",
       "type": "series",
       "name": "Uma Musume: Cinderella Gray Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195240-RopaGsHkYSYi.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195240-hKcmllV6YHQT.jpg",
       "description": "Genres: Drama, Sports\nTags:Athletics/Female Protagonist/Historical/Kemonomimi/Primarily Female Cast\nThe second half of <i>Umamusume: Cinderella Gray</i>."
     },
     {
@@ -253,13 +253,6 @@
       "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae Iwata, a slightly tougher-than-average girl, falls for the gentle smile of Kouki Kamishiro, a delicate boy, back in elementary school. By the time they enter junior high school, Kuoki has grown into a charming and popular teen who now feels out of reach. When they are assigned to the sports festival committee together, Sae’s long-hidden first love begins to stir once more.\n<br><br>\n(Source: Amazon Prime Video, edited)"
     },
     {
-      "id": "tt37499375",
-      "type": "series",
-      "name": "DIGIMON BEATBREAK",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
-      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
-    },
-    {
       "id": "tt34852231",
       "type": "series",
       "name": "GNOSIA",
@@ -274,11 +267,18 @@
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Iyashikei/Female Protagonist/Travel/Motorcycles\nTwo young girls, Yoko and Airi, travel through an empty post-apocalyptic world.\n<br><br>\nThey photograph the scenery of famous places all to themselves and camp out in towns full of nature.\n<br><br>\nThe two of them ride and travel on a Serow off-road motorbike together, experiencing a never-before-felt freedom in travel with no traffic and no traffic lights.\n<br><br>\nWith the Serow bike, they embark on a journey around a now-destroyed Japan; a unique story about touring on a bike comes to life as an anime series!\n<br><br>\nThe world's over now, so let’s hop on a bike and go on a journey!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt37499375",
+      "type": "series",
+      "name": "DIGIMON BEATBREAK",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
+      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
+    },
+    {
       "id": "tt37431541",
       "type": "series",
       "name": "Hands off: Sawaranaide Kotesashi-kun!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187331-ylRHyvJIVPeO.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
+      "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity/Primarily Teen Cast\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
     {
       "id": "tt32779175",
@@ -309,11 +309,11 @@
       "description": "Genres: Drama, Music\nTags:Classical Music\nThe second season of <i>Ao no Orchestra</i>."
     },
     {
-      "id": "tt13622982",
+      "id": "tt34710525",
       "type": "series",
-      "name": "Star Wars: Visions Volume 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184642-tIIbvVKE5KSW.jpg",
-      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Anthology/Episodic/Space/Ensemble Cast\nThe critically-acclaimed series of animated shorts returns to Japan for a third installment in collaboration with nine anime studios.<br><br>\n\n1) <i>The Duel: Payback</i> (Mizuno Takanobu, Kamikaze Douga x Anima) <br>\n2) <i>The Lost Ones</i>  (Hitoshi Haga, Kinema Citrus) <br>\n3) <i>The Ninth Jedi: Child of Hope</i> (Naoyoshi Shiotani, Production I.G.) <br>\n4) <i>Yuko's Treasure</i> (Masaki Tachibana, Kinema Citrus)<br>\n5) <i>The Smuggler</i> (Masahiko Ootsuka, Trigger) <br>\n6) <i>The Bounty Hunters</i> (Junichi Yamamoto, Wit Studio) <br>\n7) <i>The Song of Four Wings</i> (Hiroyasu Kobayashi, Project Studio Q) <br>\n8) <i>Bird of Paradise</i> (Tadahiro Yoshihira, Polygon Pictures) <br>\n9) <i>Black</i> (Shinya Oohira, David Production) <br>"
+      "name": "Cat's Eye (2025)",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184718-GvNnorokj1i3.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Shounen/Female Protagonist/Police/Fugitive/Episodic/Primarily Female Cast/Heterosexual/Primarily Adult Cast/Urban/Detective/Restaurant\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
     },
     {
       "id": "tt37532040",
@@ -323,11 +323,11 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Female Protagonist/Foreign/Video Games\nSamara “Sam” Young is a developer in Los Angeles who’s about to achieve her dreams with her first video game, Ruminate. That is, until a popular streamer gives the game a scathing review. Even worse, Sam finds out the troublesome critic is now her new neighbor! Get lost in a comedic, romantic, and all-too-real story about gaming, memes, and social anxiety. Come for the plot, stay for the doggo. <br><br>\n\n(Source: Crunchyroll) "
     },
     {
-      "id": "tt34710525",
+      "id": "tt13622982",
       "type": "series",
-      "name": "Cat's Eye (2025)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184718-GvNnorokj1i3.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Shounen/Female Protagonist/Police/Fugitive/Episodic/Primarily Female Cast/Heterosexual/Primarily Adult Cast/Urban/Detective/Restaurant\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
+      "name": "Star Wars: Visions Volume 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184642-tIIbvVKE5KSW.jpg",
+      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Anthology/Episodic/Space/Ensemble Cast\nThe critically-acclaimed series of animated shorts returns to Japan for a third installment in collaboration with nine anime studios.<br><br>\n\n1) <i>The Duel: Payback</i> (Mizuno Takanobu, Kamikaze Douga x Anima) <br>\n2) <i>The Lost Ones</i>  (Hitoshi Haga, Kinema Citrus) <br>\n3) <i>The Ninth Jedi: Child of Hope</i> (Naoyoshi Shiotani, Production I.G.) <br>\n4) <i>Yuko's Treasure</i> (Masaki Tachibana, Kinema Citrus)<br>\n5) <i>The Smuggler</i> (Masahiko Ootsuka, Trigger) <br>\n6) <i>The Bounty Hunters</i> (Junichi Yamamoto, Wit Studio) <br>\n7) <i>The Song of Four Wings</i> (Hiroyasu Kobayashi, Project Studio Q) <br>\n8) <i>Bird of Paradise</i> (Tadahiro Yoshihira, Polygon Pictures) <br>\n9) <i>Black</i> (Shinya Oohira, David Production) <br>"
     },
     {
       "id": "tt2404499",
