--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,16 +1,6 @@
 {
   "metas": [
     {
-      "id": "tt14523706",
-      "type": "movie",
-      "name": "Puella Magi Madoka Magica the Movie -Walpurgisnacht: Rising-",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx133007-5gOUXDvzxy9S.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt14523706"
-      },
-      "description": "Genres: Mahou Shoujo\nTags:Magic/Female Protagonist/Primarily Female Cast/Philosophy/Witch/Super Power/Urban Fantasy/Kuudere/Guns/Curses\nThe 10th anniversary online event for the <i>Mahou Shoujo Madoka☆Magica</i> anime revealed that the franchise is getting a new anime film titled <i>Mahou Shoujo Madoka☆Magica: Walpurgis no Kaiten</i>. The film will be an official sequel to the <i>Mahou Shoujo Madoka☆Magica: Hangyaku no Monogatari</i> film that opened in October 2013. The tagline on the new film's visual reads, <i>\"Now, let's continue the story.\"</i><br><br>\n(Source: Anime News Network, edited)"
-    },
-    {
       "id": "tt38650409",
       "type": "movie",
       "name": "That Time I Got Reincarnated as a Slime the Movie: Tears of the Azure Sea",
@@ -18,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38650409"
       },
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Medieval/Isekai/Male Protagonist/Demons/Agender/Shounen/Femboy\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Medieval/Male Protagonist/Demons/Agender/Shounen/Femboy\nThe second movie in the <i>Tensei Shitara Slime Datta Ken</i> series.<br><br>\nAfter concluding the opening ceremony of the Demon Kingdom Federation Tempest, Rimuru and his companions are invited by the Celestial Emperor Hermesia of the great elven nation – the Magi Dynasty Salion – to visit her private resort island. As the group enjoys their brief vacation, a mysterious woman named Yura appears. A new incident unfolds against the backdrop of the boundless azure sea.<br><br>\n\n(Source: Crunchyroll)<br><br>\n<i>Note: Relations are provisional and subject to change.</i>"
     },
     {
       "id": "tt1592253",
@@ -28,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt1592253"
       },
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/School/Coming of Age/Male Protagonist/Female Protagonist/Primarily Teen Cast/Tsundere/Food/Chuunibyou/Shounen\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Coming of Age/School/Male Protagonist/Female Protagonist/Primarily Teen Cast/Food/Tsundere/Shounen/Chuunibyou\nA re-edit of both anime seasons featuring newly added footage and will depict the story of Ichikawa and Yamada after the events of the TV series."
     },
     {
       "id": "tt36148135",
@@ -38,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36148135"
       },
-      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Survival/Robots/Heterosexual/Female Protagonist\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
+      "description": "Genres: Action, Sci-Fi, Supernatural, Thriller\nTags:Aliens/Time Loop/War/Gore/Survival/Female Protagonist/Robots/Heterosexual\nAfter an unidentified plant from outer space invasion, Rita finds herself trapped in a time loop, forced to relive the same day over and over again. With each loop, she learns. She fights. Her memories and experiences sharpen her skills, turning her into a formidable warrior. Yet, the endless cycle of death and solitude begins to wear her down. Then, she meets Keiji. <i> \"I've been repeating this day too,\" </i> he says. Two lost souls, trapped in an endless war. Could their meeting change fate?\n<br><br>\n(Source: Warner Bros. Japan Anime)\n<br><br>\n<i>Note: The film received an early premiere at the 2025 Annecy International Animation Film Festival  on June 9, 2025.</i>"
     },
     {
       "id": "tt38649153",
@@ -58,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32915652"
       },
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Military/Real Robot\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Real Robot/Military\nSecond movie in the Hathaway trilogy celebrating the Gundam franchise's 40th anniversary, and the second project in the \"UC NexT 0100 Project\" that will tackle the future of the UC timeline.\n<br><br>\nHaunted by past trauma, Hathaway is drawn to the mysterious girl Gigi Andalucia, whose strange powers stir memories within him. While swayed by her cryptic words, he continues preparing for Mafty’s mission — the attack on the Adelaide Conference. Meanwhile, Kenneth Sleg of the Federation Forces prepares a defense operation for the Adelaide Conference and a plan to eliminate Mafty, when he is approached by Handley Yoxon of the Criminal Police Organization with a secret proposal. As Hathaway and Kenneth pursue their respective goals, Gigi also sets off for Hong Kong to fulfill her own role. \n<br><br>\n(Source: GundamInfo)"
     },
     {
       "id": "tt32192760",
@@ -78,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt37931873"
       },
-      "description": "Genres: Action, Comedy, Sci-Fi\nTags:Gore/Samurai/Shounen/Parody\nMovie remake of the Yoshiwara Enjou arc.\n<br><br>\n\nUpon meeting a young boy named Haruta who makes a living as a pickpocket, Gintoki discovers that he is pickpocketing out of a desire to meet his long-lost mother, Hiwa, Yoshiwara's number one courtesan. Gintoki and his friends venture to Yoshiwara to fulfill Haruta's wish, but standing in their way is Housen, the Night King who rules Yoshiwara.\n<br><br>\n<i>Note: This anime was announced at the \"Gintama Multiverse Festival,\" an event held on August 16th, as part of the \"Gintama 20th Anniversary Project.\" This movie features volumes 25 and 26 of the manga, and the TV anime series spans eight episodes, from episodes 139 to 146.</i>"
+      "description": "Genres: Action, Comedy, Sci-Fi\nTags:Samurai/Gore/Shounen/Parody\nMovie remake of the Yoshiwara Enjou arc.\n<br><br>\n\nUpon meeting a young boy named Haruta who makes a living as a pickpocket, Gintoki discovers that he is pickpocketing out of a desire to meet his long-lost mother, Hiwa, Yoshiwara's number one courtesan. Gintoki and his friends venture to Yoshiwara to fulfill Haruta's wish, but standing in their way is Housen, the Night King who rules Yoshiwara.\n<br><br>\n<i>Note: This anime was announced at the \"Gintama Multiverse Festival,\" an event held on August 16th, as part of the \"Gintama 20th Anniversary Project.\" This movie features volumes 25 and 26 of the manga, and the TV anime series spans eight episodes, from episodes 139 to 146.</i>"
     },
     {
       "id": "tt37874634",
@@ -88,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt37874634"
       },
-      "description": "Genres: \nTags:Female Protagonist/Foreign/Ballet\n<i>\"I want to blossom, in this city.\"</i>\n<br><br>\nThe story follows two Japanese girls who never give up in reaching for étoile (stars) during the difficult times at the start of 20th century. Fujiko, who dreams of becoming a painter, and Chizuru, who is drawn into the world of ballet, meet by chance in Yokohama. Then, as if guided by fate, they meet again in Paris and work hard to follow their dreams together. <br><br>\n\n(Source: Anime News Network)"
+      "description": "Genres: \nTags:Female Protagonist/Ballet/Foreign\n<i>\"I want to blossom, in this city.\"</i>\n<br><br>\nThe story follows two Japanese girls who never give up in reaching for étoile (stars) during the difficult times at the start of 20th century. Fujiko, who dreams of becoming a painter, and Chizuru, who is drawn into the world of ballet, meet by chance in Yokohama. Then, as if guided by fate, they meet again in Paris and work hard to follow their dreams together. <br><br>\n\n(Source: Anime News Network)"
     },
     {
       "id": "tt36461929",
@@ -108,7 +98,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt39195826"
       },
-      "description": "Genres: Comedy\nTags:Parody/Female Protagonist/Primarily Female Cast\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
+      "description": "Genres: Comedy\nTags:Female Protagonist/Parody/Primarily Female Cast\nFour part adaptation of the <i>Girls und Panzer: Motto Love Love Sakusen desu!</i> manga.\n<br><br>\n(Source: Natalie Comics)"
     },
     {
       "id": "tt38507195",
@@ -118,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt38507195"
       },
-      "description": "Genres: Horror, Sci-Fi\nTags:Female Protagonist/Isekai/Full CGI/Denpa/Cosmic Horror\nOne day, Shiori Maezawa, an ordinary high school girl, cracked her smartphone while falling down a staircase. As she wakes up, she finds herself in a deserted, parallel world that looks like Yokohama.\n<br><br>\nWhen she looks at her smartphone, she finds a photo of herself that she doesn't remember posting on social media. What’s the source of this mysterious post?\n<br><br>\nWill she be able to escape from this strange smartphone labyrinth?\n<br><br>\n(Source: Official Site, translated)"
+      "description": "Genres: Horror, Sci-Fi\nTags:Female Protagonist/Isekai/Denpa/Full CGI/Cosmic Horror\nOne day, Shiori Maezawa, an ordinary high school girl, cracked her smartphone while falling down a staircase. As she wakes up, she finds herself in a deserted, parallel world that looks like Yokohama.\n<br><br>\nWhen she looks at her smartphone, she finds a photo of herself that she doesn't remember posting on social media. What’s the source of this mysterious post?\n<br><br>\nWill she be able to escape from this strange smartphone labyrinth?\n<br><br>\n(Source: Official Site, translated)"
     },
     {
       "id": "tt39228706",
@@ -128,7 +118,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt39228706"
       },
-      "description": "Genres: Adventure, Comedy, Fantasy, Sci-Fi\nTags:Trains/Space\nTheatrical version of <i>Ginga Tokkyuu Milky☆Subway</i> with additional new scenes."
+      "description": "Genres: Adventure, Comedy, Fantasy, Sci-Fi\nTags:Space/Trains\nTheatrical version of <i>Ginga Tokkyuu Milky☆Subway</i> with additional new scenes."
     },
     {
       "id": "tt38201958",
